# Chatbot_Prompt

./: IT_기획.md  TODO_trading_system.md  reversing.md  데이터분석.md  부동산.md
trading-system/: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
trading-system/backend/: Dockerfile  pyproject.toml
trading-system/backend/alembic/: env.py
trading-system/backend/alembic/versions/: 0001_initial_schema.py  0002_sandbox_log.py  0003_no_op.py
trading-system/backend/app/: auth.py  config.py  db.py  main.py
trading-system/backend/app/core/: prompts.py  stats.py  time.py
trading-system/backend/app/models/: __init__.py
trading-system/backend/app/routers/: ai.py  backtests.py  benchmarks.py  indicators.py  market.py  strategies.py  symbols.py  ws.py
trading-system/backend/app/schemas/: ai.py  backtest.py  benchmark.py  indicators.py  market.py  strategy.py  symbols.py
trading-system/backend/app/services/backtest/: engine.py  signal_evaluator.py
trading-system/backend/app/services/indicators/: ai_converter.py  builtin.py  sandbox.py  validator.py
trading-system/backend/app/services/market/: binance.py  resample.py  service.py  yfinance_service.py
trading-system/backend/app/services/realtime/: streamer.py
trading-system/frontend/: package.json
trading-system/frontend/src/: App.tsx
trading-system/frontend/src/lib/: api.ts  ws.ts
trading-system/sandbox/: Dockerfile  requirements.txt  runner.py
trading-system/tests/: conftest.py  test_builtin_indicators.py  test_resample.py  test_signal_evaluator.py  test_time.py  test_validator.py
(+15 files in other folders)
