[project]
name = "trading-system-backend"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
  "fastapi>=0.110,<0.120",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "pandas==2.1.4",
  "numpy==1.26.4",
  "numba==0.59.1",
  "pandas-ta==0.3.14b0",
  "vectorbt==0.26.2",
  "yfinance>=0.2.40",
  "httpx>=0.27",
  "anthropic>=0.34",
  "redis>=5.0",
  "pydantic>=2.5,<3",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
